[gd_scene load_steps=7 format=3 uid="uid://dha8jok0800wq"]

[ext_resource type="Script" path="res://server/server.gd" id="1_3dcay"]
[ext_resource type="Texture2D" uid="uid://dupquathnjtns" path="res://addons/kenney_particle_pack/circle_05.png" id="2_4qhs4"]
[ext_resource type="Script" path="res://common/common.gd" id="3_v4t64"]
[ext_resource type="PackedScene" uid="uid://bbvlgpjk5hkof" path="res://instance/Leg/leg.tscn" id="4_1af86"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kae4"]
bg_color = Color(0.835294, 0.835294, 0.835294, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ec4ec"]
bg_color = Color(0.317647, 0.698039, 0.345098, 1)

[node name="main" type="Node"]
script = ExtResource("1_3dcay")

[node name="LoginSystem" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="LoginSystem"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = 138.0
offset_right = -180.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LoginSystem/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="LoginSystem/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="LoginSystem/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="LoginSystem/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "host"

[node name="JoinButton" type="Button" parent="LoginSystem/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="LineEdit" type="LineEdit" parent="LoginSystem/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "edit adrees"

[node name="HUD" type="Control" parent="LoginSystem"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="LoginSystem/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("2_4qhs4")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="LoginSystem/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 417.0
offset_top = 48.0
offset_right = -421.0
offset_bottom = -564.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1kae4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ec4ec")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="common" type="Node" parent="."]
script = ExtResource("3_v4t64")

[node name="level" type="Node" parent="common"]

[node name="leg" parent="common" instance=ExtResource("4_1af86")]

[node name="levelSpawner" type="MultiplayerSpawner" parent="common"]
_spawnable_scenes = PackedStringArray("res://level/level_main.tscn")
spawn_path = NodePath("../level")
spawn_limit = 1

[node name="players" type="Node" parent="common"]

[node name="playersSpawner" type="MultiplayerSpawner" parent="common"]
_spawnable_scenes = PackedStringArray("res://instance/Player/player.tscn")
spawn_path = NodePath("../players")

[connection signal="pressed" from="LoginSystem/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
